--- a/variation.tex
+++ b/variation.tex
@@ -174,15 +174,19 @@ The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the inte
   \subsubsection{external is grammatical}
 
 
-Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is accusative and the external case is dative.
+Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
 The internal case is nominative. The predicate \tit{zalta} `named' takes accusative objects.
-The external case is dative. The predicate \tit{furira} `superior' takes dative objects.
+The external case is dative. The predicate \tit{furira} `older' takes dative objects.
 The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
-\exg. istû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
- {are you} superior\scsub{[dat]} {to Abraham} also \tsc{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
- `are you superior to Abraham to those which they just mentioned?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
+\exg. bistû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
+ {are you} older\scsub{[dat]} {Abraham} and \tsc{rel}.\ac{dat}.\tsc{pl} one here just named\scsub{[acc]}\\
+ `are you really older than Abraham and (those) who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}, after Delbrück}\label{ex:ohg-dat-acc}
+
+%% zoek voor deze!! Übersetzung in Delbrück, S. 373
+%also take his spelling
+
 
 Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
 The internal case is nominative. The predicate \tit{sprah} `spoke' takes nominative subjects.
@@ -194,36 +198,25 @@ Examples in which the internal case is nominative, the external case is dative a
  he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
  `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
+ %check for pittner's spelling
+
+
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
-The external case is accusative. The predicate \tit{bibringu} `educate' takes accusative objects.
+The external case is accusative. The predicate \tit{bibringu} `bring to light' takes accusative objects.
 The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
 
-\exg. ih bibringu fona Juda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
- I educate\scsub{[acc]} about Juda \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
- `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
+\exg. ih bibringu fona (iacobes samin endi) Iuda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
+ I {bring to light}\scsub{[acc]} about (Jacob together end?) Judas \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
+ `I bright to light the one who wanders through my mountains about Jacob and end of Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
 
-  \exg. gaat uz diu halt za dem iz forchaufent\\
-   \\
-   `' \flushfill{\ac{ohg}, Monsee Fragments 20,14, \citealt[761]{behaghel1923}}
-  % \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
-  %  \\
-  %  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{\ac{ohg}, Tatian 118,1, \citealt[761]{behaghel1923}}
-  % \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
-  %  \\
-  %  `' \flushfill{\ac{ohg}, Otfrid II,8,24, \citealt[761]{behaghel1923}}
+%%check for hans eggers spelling
+%(Der althochdeutsche Isidor. Nach der Pariser Handschrift und den Monseer Fragmenten neu herausgegeben von Hans Eggers. Tübingen: Niemeyer 1964, S. 61 und 63)
 
 
-  \exg. thia laz ih themo iz lisit thar\\
-   \\
-   `' \flushfill{\ac{ohg}, Otfrid I,19,25, \citealt[761]{behaghel1923}}
-  % \bg. noh so neduohti in gnuoge des si habetin\\
-  %  \\
-  %  `' \flushfill{\ac{ohg}, Notker I,63,29, \citealt[761]{behaghel1923}}
-  % \bg. tannoh pito ih tes noh fore ist (id quod)\\
-  %  \\
-  %  `' \flushfill{\ac{ohg}, Notker 193,19, \citealt[761]{behaghel1923}}
+
+
 
 
 
@@ -242,12 +235,6 @@ Examples in which the internal case is nominative, the external case is accusati
  \ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
  \a. \ac{dat} not attested
  \b. \ac{acc} not attested
-
-
- Don't know:
-
- So, to sum up:
-
 
 
 
