--- a/thesis.tex
+++ b/thesis.tex
@@ -41,16 +41,17 @@
 
 \include{introduction}
 
-\part{The constant winner}\label{part:complexity}
+\part{The stable case facts}\label{part:complexity}
 \include{recurring-pattern}
 \include{case-decomposition}
 
-\part{The varying participants}\label{part:direction}
+\part{Differences within Germanic}\label{part:direction}
 \include{variation}
 \include{morphology-syntax}
 
 \part{Details}\label{part:details}
 \include{details}
+\include{stuff}
 
 \bookmarksetup{startatroot}
 \include{conclusion}
